# yt-brain

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  CONTRIBUTING.md  INSTALL.md  LICENSE  Makefile  README.md  go.sh  praxis.yaml  pyproject.toml  run.sh  update.sh
.claude/: settings.local.json
.github/workflows/: ci.yml  publish.yml
docs/: backlog.md
docs/design/: 2026-03-28-sync-design.md  2026-03-28-sync-plan.md  2026-03-29-semantic-search-design.md  2026-03-30-brain-drain-brainstorm.md  2026-03-30-transcript-bulk-fetch-brainstorm.md  brainstorm-01.md  dev-journal-phase1.md  dev-journal-semantic-search.md  dev-journal-sync.md  phase1-plan.md  spec.md
docs/research/: engagement-metrics.md
docs/superpowers/plans/: 2026-03-29-semantic-video-clustering.md  2026-04-04-filter-removed-videos.md  2026-04-04-semantic-distance-slider.md  2026-04-04-table-sorting-and-columns.md  2026-04-04-unified-svg-icons.md  2026-04-05-public-release-ux.md
docs/superpowers/specs/: 2026-03-29-semantic-video-clustering-design.md  2026-04-04-filter-removed-videos-design.md  2026-04-04-semantic-distance-slider-design.md  2026-04-04-table-sorting-and-columns-design.md  2026-04-04-unified-svg-icons-design.md  2026-04-05-public-release-ux-design.md
migrations/: 001_initial_schema.sql  002_starred_channels.sql  003_video_category.sql  004_video_embeddings.sql  005_video_clusters.sql  006_cluster_categories.sql  007_video_liked_published.sql  008_cosine_embeddings.sql
src/yt_brain/: __init__.py  cli.py
src/yt_brain/application/: backfill.py  classify.py  cluster.py  doctor.py  embed.py  ingest.py  review.py  status.py  surgeon.py  sync.py  transcript.py
src/yt_brain/domain/: classifier.py  errors.py  models.py
src/yt_brain/infrastructure/: config.py  database.py  takeout_parser.py  ytdlp_adapter.py
src/yt_brain/web/: classifier.py  dashboard.py
tests/: conftest.py  test_cluster_no_anthropic.py  test_config_env.py  test_doctor.py  test_no_sqlite_vec.py  test_surgeon.py
tests/features/: classify.feature  cluster.feature  database.feature  ingest_manual.feature  ingest_takeout.feature  models.feature  review.feature  status.feature  sync.feature
tests/step_defs/: test_backfill.py  test_classify.py  test_cluster.py  test_cluster_service.py  test_database.py  test_ingest_manual.py  test_ingest_takeout.py  test_models.py  test_review.py  test_status.py  test_sync.py
tests/web/: conftest.py  test_dashboard_layout.py  test_filter_removed_videos.py
