[project]
name = "yt-brain"
version = "0.1.0"
description = "YouTube knowledge brain — ingest, classify, and curate your YouTube activity"
authors = [{ name = "jayers99" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "typer>=0.15.1",
    "rich>=13.9.4",
    "pydantic>=2.10.4",
    "pyyaml>=6.0.2",
    "flask>=3.1.3",
]

[project.scripts]
yt-brain = "yt_brain.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-bdd>=8.1.0",
    "ruff>=0.8.4",
    "mypy>=1.14.1",
    "types-pyyaml>=6.0.12",
    "pre-commit>=4.5.1",
    "pytest-playwright>=0.7.2",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
files = ["src"]
exclude = ["tests/"]

[[tool.mypy.overrides]]
module = ["tests.*"]
ignore_errors = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yt_brain"]
