[project]
name = "yt-brain"
version = "0.1.3"
description = "YouTube knowledge brain — ingest, classify, and curate your YouTube activity"
authors = [{ name = "jayers99" }]
readme = "README.md"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
]
requires-python = ">=3.12"
dependencies = [
    "typer>=0.15.1",
    "rich>=13.9.4",
    "pydantic>=2.10.4",
    "pyyaml>=6.0.2",
    "flask>=3.1.3",
    "sentence-transformers>=3.4.1",
    "sqlite-vec>=0.1.6",
    "hdbscan>=0.8.40",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
ai = ["anthropic>=0.42.0"]

[project.urls]
Homepage = "https://github.com/jayers99/yt-brain"
Repository = "https://github.com/jayers99/yt-brain"
"Bug Tracker" = "https://github.com/jayers99/yt-brain/issues"

[project.scripts]
yt-brain = "yt_brain.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-bdd>=8.1.0",
    "ruff>=0.8.4",
    "mypy>=1.14.1",
    "types-pyyaml>=6.0.12",
    "pre-commit>=4.5.1",
    "pytest-playwright>=0.7.2",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501", "E402"]
"src/yt_brain/web/dashboard.py" = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
files = ["src"]
exclude = ["tests/"]

[[tool.mypy.overrides]]
module = ["anthropic", "anthropic.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.*"]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["yt_brain.web.dashboard"]
disallow_untyped_defs = false
disable_error_code = ["attr-defined", "arg-type", "return-value", "call-overload", "operator"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yt_brain"]
